--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -21,6 +21,10 @@
   <servlet>
     <servlet-name>osf</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>  
+        <param-name>contextConfigLocation</param-name>  
+        <param-value>/WEB-INF/osf-servlet.xml</param-value>  
+    </init-param> 
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
