--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,11 @@
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java</artifactId>
 			<version>2.4.1</version>
-		</dependency>										
+		</dependency>	
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.2</version>
+		</dependency>									
 	</dependencies>	
 </project>
