图片统计加入域

--- a/src/main/resources/spring/property.properties
+++ b/src/main/resources/spring/property.properties
@@ -16,6 +16,8 @@ redis.maxWait=1000
 redis.testOnBorrow=true
 
 # thumbnail style
-post_cover=
+post_cover_thumbnail=
 album_thumbnail=
  
+# 
+img_base_url=http://osfimgs.oss-cn-hangzhou.aliyuncs.com/
