change img storage from aliyun oss to Qiniu

--- a/pom.xml
+++ b/pom.xml
@@ -234,5 +234,10 @@
 			<artifactId>thumbnailator</artifactId>
 			<version>0.4.8</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.qiniu</groupId>
+		    <artifactId>qiniu-java-sdk</artifactId>
+		    <version>7.0.0</version>
+		</dependency>
 	</dependencies>	
 </project>
