--- a/src/main/resources/spring/property.properties
+++ b/src/main/resources/spring/property.properties
@@ -16,8 +16,8 @@ redis.maxWait=1000
 redis.testOnBorrow=true
 
 # thumbnail style
-post_cover_thumbnail=
-album_thumbnail=
+post_cover_thumbnail=?imageView2/2/w/500
+album_thumbnail=?imageView2/1/w/200/h/200
  
 # 
-img_base_url=http://osfimgs.oss-cn-hangzhou.aliyuncs.com/
+img_base_url=http://7xkkim.com1.z0.glb.clouddn.com/
