add mail config

--- a/src/main/resources/spring/property.properties
+++ b/src/main/resources/spring/property.properties
@@ -1,3 +1,9 @@
+#domain
+domain.name=localhost
+domain.ip=127.0.0.1
+domain.port=8080
+context=com.lvwang.osf
+
 # jdbc pool config
 
 jdbc.driver=com.mysql.jdbc.Driver
@@ -14,6 +20,10 @@ redis.maxIdle=300
 redis.maxActive=600
 redis.maxWait=1000
 redis.testOnBorrow=true
+
+# mail
+mail.from=opensharefreedom@aliyun.com
+mail.password=osf123456
 
 # thumbnail style
 post_cover_thumbnail=?imageView2/2/w/500
