--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>com.lvwang.osf</display-name>
+ 
+ <filter>
+  	<filter-name>InitFilter</filter-name>
+  	<filter-class>com.lvwang.osf.web.InitFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>InitFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
   
   <context-param>
     <param-name>contextConfigLocation</param-name>
