--- a/pom.xml
+++ b/pom.xml
@@ -239,5 +239,11 @@
 		    <artifactId>qiniu-java-sdk</artifactId>
 		    <version>7.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>ST4</artifactId>
+			<version>4.0.7</version>
+		</dependency>
+
 	</dependencies>	
 </project>
