reset pwd email template

--- a/src/main/resources/spring/property.properties
+++ b/src/main/resources/spring/property.properties
@@ -2,7 +2,7 @@
 domain.name=localhost
 domain.ip=127.0.0.1
 domain.port=8080
-context=com.lvwang.osf
+context=/com.lvwang.osf
 
 # jdbc pool config
 
